objects/AI_Agent__c.object
<CustomObject>
    <description>Used for the AI Agents demo component, indicates an AI Agent that is displayed on the component</description>
    <fields>
        <fullName>Display_Agent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether to show or hide this agent from the AI Agents demo component</description>
        <label>Display Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Num_Conversations__c</fullName>
        <label>Num Conversations</label>
        <summaryForeignKey>AI_Agent_Conversation__c.AI_Agent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>AI Agent</label>
    <nameField>
        <label>AI Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>